--- a/PBL6/Application/ViewControllers/Proof/Cell/ProofItemCell.xib
+++ b/PBL6/Application/ViewControllers/Proof/Cell/ProofItemCell.xib
@@ -65,13 +65,10 @@
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                <color key="value" red="0.85098039215686272" green="0.85098039215686272" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
-                            </userDefinedRuntimeAttribute>
-                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                <real key="value" value="1"/>
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="12"/>
+                                <real key="value" value="0.0"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
@@ -84,6 +81,17 @@
                 <constraint firstItem="R1O-CF-7BC" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Il4-4d-fB1"/>
                 <constraint firstAttribute="trailing" secondItem="R1O-CF-7BC" secondAttribute="trailing" id="rh7-8K-fct"/>
             </constraints>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                    <real key="value" value="12"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                    <color key="value" red="0.85098039215686272" green="0.85098039215686272" blue="0.85098039215686272" alpha="1" colorSpace="calibratedRGB"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                    <real key="value" value="1"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="proofNameLabel" destination="aLx-wg-OeE" id="0pP-g6-ekm"/>
                 <outlet property="proofStateLabel" destination="PY0-x6-AnT" id="Agz-Iv-cxB"/>
